b-bones interpolation error #73117

Closed
opened 2020-01-14 17:03:01 +01:00 by Ivan Cappiello · 9 comments
Member

System Information
Operating system: Darwin-19.2.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Graphics 6100 Intel Inc. 4.1 INTEL-14.3.9

Blender Version
Broken: version: 2.82 (sub 5)

Short description of error
b-bones interpolation error on bones with different length

Exact steps for others to reproduce the error
open the attached blend file and play the animation. As the second b-bone rotates the first b-bone start flipping.

flip_upparm_bug1.blend

test_flip.gif

**System Information** Operating system: Darwin-19.2.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Graphics 6100 Intel Inc. 4.1 INTEL-14.3.9 **Blender Version** Broken: version: 2.82 (sub 5) **Short description of error** b-bones interpolation error on bones with different length **Exact steps for others to reproduce the error** open the attached blend file and play the animation. As the second b-bone rotates the first b-bone start flipping. [flip_upparm_bug1.blend](https://archive.blender.org/developer/F8278020/flip_upparm_bug1.blend) ![test_flip.gif](https://archive.blender.org/developer/F8278021/test_flip.gif)
Author
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Author
Member

discussed this with @angavrilov, in his opinion it seems to be basically some kind of variation on gimbal lock or suchlike it for some reason computes the roll as +-180 degrees instead of near 0.
possibly it needs to use the proper swing+twist decomposition math (now that it is implemented elsewhere) instead of whatever it's doing now

Obviously rigify is affected by the issue.

discussed this with @angavrilov, in his opinion it seems to be basically some kind of variation on gimbal lock or suchlike it for some reason computes the roll as +-180 degrees instead of near 0. possibly it needs to use the proper swing+twist decomposition math (now that it is implemented elsewhere) instead of whatever it's doing now Obviously rigify is affected by the issue.
Alexander Gavrilov self-assigned this 2020-01-14 17:07:11 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Not a bug per-se though, more like internal limitation of current code, so tagging as known issue.

Not a bug per-se though, more like internal limitation of current code, so tagging as known issue.

Added subscriber: @MarcelLegindi

Added subscriber: @MarcelLegindi

This issue was referenced by d1657b406e

This issue was referenced by d1657b406ed0f3df9e1690cd445702c6178ffd15

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73117
No description provided.